acm-root/namespaces/opssre/test/opssre-gateway-test-asm/grafana-vs-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs-test
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-test-clusters
spec:
  hosts:
  - "feitopssreaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-test/internal-asm-gateway-test
  http:
  - match:
    - uri:
        prefix: "/grafana/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 3000
        host: grafana.istio-system.svc.cluster.local
