acm-root/namespaces/opssre/test/opssre-gateway-test-asm/httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-vs
spec:
  hosts:
  - "feitopssreaks001.feiaz.ferguson.com"
  gateways:
  - internal-asm-gateway-test
  http:
  - match:
    - uri:
        prefix: /status
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin.sample.svc.cluster.local
