acm-root/namespaces/opssre/test/opssre-gateway-test-asm/internal-asm-gateway-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-asm-gateway-test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: internal-gw-tls-credential
    hosts:
    - feitopssreaks001.feiaz.ferguson.com
