acm-root/namespaces/opssre/test/opssre-gateway-test-asm/kiali-vs-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs-test
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-test-clusters
spec:
  hosts:
  - "feitopssreaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-test/internal-asm-gateway-test
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
