acm-root/namespaces/opssre/test/opssre-gateway-test-asm/prometheus-vs-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs-test
  annotations:
    configmanagement.gke.io/cluster-selector: opssre-test-clusters
spec:
  hosts:
  - "feitopssreaks001.feiaz.ferguson.com"
  gateways:
  - opssre-gateway-test/internal-asm-gateway-test
  http:
  - match:
    - uri:
        prefix: "/prometheus/"
    rewrite:
      uri: "/"
 
    route:
    - destination:
        port:
          number: 9090
        host: prometheus.istio-system.svc.cluster.local
